// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contact-summary > route getLicenseeDetailsSummaryRows returns value of isLicenceForYou if licence is "false" 1`] = `Symbol(Review or change the licence details other)`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows returns value of isLicenceForYou if licence is "true" 1`] = `Symbol(Review or change the licence details)`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 1 day (non physical licence) should display the Contact as Make a note on confirmation 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence-details),
    },
    "value": Object {
      "text": "contact-summary-license-non-physical",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 1 day (non physical licence) should display the Contact as the email and Newsletter as no 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence-details),
    },
    "value": Object {
      "text": "contact-summary-emailbrenin@example.com",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 1 day (non physical licence) should display the Contact as the phone number and Newsletter as yes 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence-details),
    },
    "value": Object {
      "text": "contact-summary-text-plrl07700900900",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 1 day (non physical licence) should have the newsletter is set have preferred method and if isLicenceForYou is true 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence-details),
    },
    "value": Object {
      "text": "contact-summary-license-non-physical",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-newsletter),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-newsletter),
    },
    "value": Object {
      "text": "aye",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 1 day (non physical licence) should have the newsletter set to no if have preferred method and if isLicenceForYou is true 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence-details),
    },
    "value": Object {
      "text": "contact-summary-license-non-physical",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-newsletter),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-newsletter),
    },
    "value": Object {
      "text": "negative, Ghost Rider",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 1 day (non physical licence) should not have the newsletter row if isLicenceForYou is false 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence-details),
    },
    "value": Object {
      "text": "contact-summary-text-plrl01234567890",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 12 month (physical licence) with postal fulfilment should display the Licence as post, Licence Confirmation and Contact as the email and Newsletter as no 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-fulfilment-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-fulfilment),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence),
    },
    "value": Object {
      "text": "contact-summary-license-physical",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-confirmation-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-confirmation),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence-conf),
    },
    "value": Object {
      "text": "contact-summary-emailbrenin@example.com",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-contact),
    },
    "value": Object {
      "text": "contact-summary-emailbrenin@example.com",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 12 month (physical licence) with postal fulfilment should display the Licence as post, Licence Confirmation and Contact as the phone number and Newsletter as yes 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-fulfilment-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-fulfilment),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence),
    },
    "value": Object {
      "text": "contact-summary-license-physical",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-confirmation-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-confirmation),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence-conf),
    },
    "value": Object {
      "text": "contact-summary-text-sngl07700900900",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-contact),
    },
    "value": Object {
      "text": "contact-summary-text-plrl07700900900",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 12 month (physical licence) with postal fulfilment should display the Licence as post, Licence Confirmation as note of licence and Contact as post 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-fulfilment-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-fulfilment),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence),
    },
    "value": Object {
      "text": "contact-summary-license-physical",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-confirmation-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-confirmation),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence-conf),
    },
    "value": Object {
      "text": "contact-summary-license-default",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-contact),
    },
    "value": Object {
      "text": "contact-summary-license-physical",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 12 month (physical licence) without postal fulfilment should display the Licence and Contact as the email and Newsletter as no 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-confirmation-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-confirmation),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence),
    },
    "value": Object {
      "text": "contact-summary-emailbrenin@example.com",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-contact),
    },
    "value": Object {
      "text": "contact-summary-emailbrenin@example.com",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 12 month (physical licence) without postal fulfilment should display the Licence and Contact as the phone number and Newsletter as yes 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-address),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-address),
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-confirmation-option",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-licence-confirmation),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-licence),
    },
    "value": Object {
      "text": "contact-summary-text-sngl07700900900",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": Symbol(addLanguageCodeToUri),
          "text": "contact-summary-change",
          "visuallyHiddenText": Symbol(contact-summary-hidden-contact),
        },
      ],
    },
    "key": Object {
      "text": Symbol(contact-summary-row-contact),
    },
    "value": Object {
      "text": "contact-summary-text-plrl07700900900",
    },
  },
]
`;
